# quale

./: .gitignore  .pre-commit-config.yaml  .quale.yml  .vocab.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  SPEC-APPENDIX-ROUND6.md  SPEC.md  VALIDATION_REPORT.md  __main__.py  bandit.yml  comparison-to-competition.md  fix_lint.py  pyproject.toml  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md  03-command-issue.md  config.yml
.github/workflows/: ci.yml  quale-self-review.yml  security.yml  stale.yml
.quale/: ci-history.jsonl
.vocab-cache/: crystallography.json
docs/: ALGORITHM.md  CI_INTEGRATION.md  COMMANDS.md  EFFECT_HARNESS.md  FEATURE_MATRIX.md  MCP_SETUP.md  PHILOSOPHY.md
quale/: __init__.py  __main__.py  analyze.py  bootstrap.py  cli.py  compare.py  concepts.py  config.py  fold.py  git.py  mcp_server.py  reports.py  scanner.py  segmenter.py
quale/formats/: llm.py  terminal.py
quale/reports/: __init__.py  analysis.py
scripts/: agent-init.sh  analyze_effect_failures.py  benchmark_session_memory.py  blind_agent_test.py  blind_benchmark.py  blind_benchmark_v2.py  cross_model_benchmark.py  deepinfra_sweep.py  discovery_experiment.py  doa_test.py  evaluate_quale_effect.py  evaluate_vocab_effect.py  gemma_experiment.py  gin_experiment.py  harness_agent_commands.py  new_models_benchmark.py  pattern_experiment.py  pre-commit.sh  private_experiment.py  quale-agent-hints.sh  quale-init.sh  smoke_models.py  structural_benchmark.py  token_experiment.py  token_experiment_v3.py  vocab-agent-hints.sh  vocab-init.sh
tests/: helpers.py  test_adversarial.py  test_cascade.py  test_cli.py  test_cli_smoke.py  test_commands.py  test_core.py  test_human_ci.py  test_install.py  test_mcp_server.py  test_output_contracts.py  test_performance.py  test_property.py  test_reports.py  test_schema_validation.py  test_session_memory.py  test_smoke.py  test_snapshots.py  test_state.py  test_structure.py
tests/fixtures/: build_cascade_repo.py
tests/schemas/: agent_edit_schema.json  agent_orient_schema.json
tests/snapshots/: agent_orient.snap  extinct_exports.snap  health_score.snap  test_gaps.snap
tmp/: blind_benchmark.txt  blind_benchmark_key.json  blind_benchmark_v2.txt  blind_benchmark_v2_key.json  doa_chain_test.json  doa_test_results.json  model_smoke_test.json
vocab/: __main__.py  analyze.py  bootstrap.py  cascade.py  cli.py  compare.py  concepts.py  fold.py  git.py  index.py  reports.py  scanner.py  segmenter.py  session_memory.py  vocabulary.py  wordlist.txt
vocab/formats/: llm.py  terminal.py
vocab_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
