[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quale"
version = "0.7.0"
description = "Structural codebase analysis — no parsers, no config, any language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "typing-extensions>=4.0",
]

[project.urls]
Homepage = "https://github.com/reliary/quale"

[project.scripts]
quale = "quale.cli:main"

[tool.setuptools.packages.find]
include = ["quale*"]
