[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quale"
version = "0.9.2"
description = "Structural codebase analysis — no parsers, no config, any language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["code-analysis", "llm", "agent", "code-review", "cli", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9",
    "typing-extensions>=4.0",
]

[project.urls]
Homepage = "https://github.com/Reliary/quale"
Repository = "https://github.com/Reliary/quale"
Documentation = "https://github.com/Reliary/quale/tree/master/docs"
Changelog = "https://github.com/Reliary/quale/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "mypy>=1.0",
    "codespell>=2.2",
]

[project.scripts]
quale = "quale.cli:_entry_main"

[tool.setuptools.packages.find]
include = ["quale*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B904", "N806", "SIM102", "E741", "B007"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/fixtures/"]

[tool.codespell]
skip = "tests/fixtures/*,.git/*,.quale/*"
ignore-words-list = "ist,nto,teh"
